# gutcheck

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gutcheck/: __init__.py  __main__.py  prompts.py
