[project]
name = "gutcheck"
version = "0.1.0"
description = "Adversarial audit of your political worldview. Paste what you believe, get back where the data backs you up, where it contradicts you, and where you quietly agree with the people you think you disagree with."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reportlab>=4.2.0",
    "rich>=13.7.0",
]

[project.scripts]
gutcheck = "gutcheck.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gutcheck"]
